# gfl-ze-watcher

./: .dockerignore  .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  Dockerfile  README.md  batch_compress_maps.sh  batch_pack_skybox.sh  compose-swarm.yaml  compose.dev.yaml  compose.yaml  compress_map_model.sh  db.sql  default.env  package-lock.json  redis.conf
.github/workflows/: main.yml
front-gfl/: .dockerignore  .env.default  Dockerfile  README.md  auth.ts  components.json  dev.Dockerfile  entrypoint.sh  eslint.config.js  index.html  next.config.ts  nginx.base.conf  nginx.conf  nginx.dev.conf  package-lock.json  package.json  postcss.config.mjs  theme.ts  tsconfig.json  vite.config.js
front-gfl/app/: CommunityList.tsx  LocalizationProvider.tsx  getCommunity.ts  getServerUser.ts  globals.css  layout.tsx  loading.tsx  manifest.ts  not-found.tsx  page.tsx  providers.tsx  robots.ts  sitemap.ts
front-gfl/app/[server_slug_legacy]/: page.tsx
front-gfl/app/admin/: AdminDashboard.tsx  AdminSidebar.tsx  layout.tsx  page.tsx
front-gfl/app/donors/: page.tsx
front-gfl/app/live/: TrackerPage.tsx  page.tsx
front-gfl/app/maps/: layout.tsx
front-gfl/app/privacy/: page.tsx
front-gfl/app/status/: page.tsx
front-gfl/components/announcements/: AnnouncementBanner.tsx  AnnouncementDialog.tsx  AnnouncementsContainer.tsx
front-gfl/components/backgrounds/: SakuraBackground.tsx
front-gfl/components/communities/: CommunityCard.tsx  ServerCard.tsx
front-gfl/components/effects/: SnowingBackground.tsx  StarryBackground.tsx
front-gfl/components/graphs/: DateStateManager.tsx  GraphSkeleton.jsx  GraphSkeleton.tsx  GraphToolbar.jsx  GraphToolbar.tsx  LazyCharts.tsx  ServerGraph.jsx  ServerGraph.tsx  SessionPlayedGraph.jsx  SessionPlayedGraph.tsx  SkeletonBarGraph.jsx  SkeletonBarGraph.tsx
front-gfl/components/guides/: MapFilterDialog.tsx  MapSelectDialog.tsx  ServerGuideCard.tsx  ServerGuidesList.tsx
front-gfl/components/maps/: CurrentMatch.jsx  CurrentMatch.tsx  MapAnalyzeAttributes.jsx  MapAnalyzeAttributes.tsx  MapAverageSessionDistribution.jsx  MapAverageSessionDistribution.tsx  MapCard.jsx  MapCard.tsx  MapCardSkeleton.jsx  MapCardSkeleton.tsx  MapGraphList.jsx  MapGraphList.tsx  MapGuidesButton.tsx  MapHeader.jsx  MapHeader.tsx  MapHeatRegion.jsx  MapHeatRegion.tsx  MapMusicDialog.tsx  MapMusicSection.tsx  MapNotifyButton.tsx  MapPlayerType.jsx  MapPlayerType.tsx  MapRegionDistribution.jsx  MapRegionDistribution.tsx  MapSessionList.jsx  MapSessionList.tsx  MapTop10PlayerList.jsx  MapTop10PlayerList.tsx  MapViewer3D.tsx  MapViewer3DWrapper.tsx  MapsFilterTab.tsx  MapsMobileView.jsx  MapsMobileView.tsx  MapsSearchControls.jsx  MapsSearchControls.tsx  MapsTable.jsx  MapsTable.tsx  MusicReportDialog.tsx
front-gfl/components/notifications/: NotificationBanner.tsx
front-gfl/components/players/: LeaderboardItem.jsx  LeaderboardItem.tsx  PlayTimeGraph.jsx  PlayTimeGraph.tsx  PlayTimeHeatmap.tsx  PlayerAliasesButton.tsx  PlayerAvatar.jsx  (+35 more)
front-gfl/lib/: GuideContextProvider.tsx  apiProxy.ts  cacheHeaders.ts  cachedFetches.ts
front-gfl/next-auth-steam/: steam.ts
front-gfl/public/: robots.txt  sw.js
front-gfl/src/: App.css  App.jsx  AppLayout.jsx  config.jsx  main.jsx  utils.jsx
front-gfl/src-old/: App.jsx  AppLayout.jsx  index.css  main.jsx
front-gfl/types/: admin.ts  announcements.ts  community.ts  fetchStatus.ts  general.ts  graphServers.ts  guides.ts  maps.ts  notifications.ts  players.ts  sitemaps.ts  users.ts
front-gfl/utils/: auth.tsx  chartSeoUtils.tsx  generalUtils.ts  modelCache.ts  sceneProcessing.ts  sessionUtils.js  uploadUtils.ts
nginx/: Dockerfile  docker-entrypoint.sh  nginx.base.conf  nginx.conf  nginx.dev.conf
pfp-provider/: Cargo.toml  Dockerfile  README.md
pfp-provider/src/: cache.rs  main.rs  providers.rs
qgis-server/: .dockerignore  Dockerfile  cmd.sh  entrypoint.sh
qgis-server/project/: project.qgz
serde_macros/: Cargo.toml
serde_macros/src/: lib.rs
src/: core.rs  global_serializer.rs  main.rs  model.rs  routers.rs  updater.rs  utils.rs
src/core/: api_models.rs  map_storage.rs  model.rs  push_service.rs  updater.rs  utils.rs  workers.rs
src/routers/: accounts.rs  admin_maps.rs  admin_servers.rs  api_models.rs  characters.rs  donations.rs  graphs.rs  maps.rs  misc.rs  players.rs  radars.rs  servers.rs
(+425 files in other folders)
