[package]
name = "gfl-ze-watcher"
version = "0.1.0"
edition = "2021"

[dependencies]
poem="3.1.7"
poem-openapi={version = "5.1.8", features = ["swagger-ui", "chrono"]}
tokio={ version = "1.43.0", features = ["rt-multi-thread"] }
sqlx = { version = "0.8.3", features = [ "runtime-tokio", "postgres", "time", "uuid"] }
chrono = "0.4.39"
tracing-subscriber= { version = "0.3.19", features = ["env-filter"] }
dotenv="0.15.0"
itertools="0.14.0"
serde="1.0.217"
serde_json = "1.0.138"
reqwest={version = "0.12.12", features = ["json"]}
sentry = "0.36.0"
sentry-tracing = "0.36.0"
tracing = "0.1.41"
deadpool-redis = "0.19.0"
redis-macros = "0.5.0"
redis= {  version = "0.28.2" }
quick-xml = { version = "0.37.2", features = ["serde", "serialize"]}
futures = "0.3.31"

[features]
docker=["openssl"]

[dependencies.openssl]
features = ["vendored"]
optional = true
version = "0.10.71"