[package]
name = "gfl-ze-watcher"
version = "0.1.0"
edition = "2024"

[dependencies]
poem = { version = "3.1.7", features = ["session"] }
poem-openapi={version = "5.1.8", features = ["swagger-ui", "chrono"]}
tokio={ version = "1.43.1", features = ["rt-multi-thread", "signal"] }
sqlx = { version = "0.8.3", features = [ "runtime-tokio", "postgres", "time", "uuid"] }
chrono = { version = "0.4.41", features = ["serde"] }
tracing-subscriber= { version = "0.3.20", features = ["env-filter"] }
dotenv="0.15.0"
serde="1.0.217"
serde_json = "1.0.138"
reqwest={version = "0.12.12", features = ["json"]}
sentry = "0.36.0"
sentry-tracing = "0.36.0"
tracing = "0.1.41"
deadpool-redis = { version = "0.22.1", features = ["rt_tokio_1"] }
redis-macros = "0.5.0"
redis="0.32.7"
futures = "0.3.31"
time = { version = "0.3", features = ["formatting", "parsing"] }
serde_macros = { path = "./serde_macros" }
image = "0.25.5"
url = "2.5.4"
rust-fuzzy-search = { git = "https://gitlab.com/EnricoCh/rust-fuzzy-search"}
uri-pattern-matcher = "0.1"
async-stream = "0.3.6"
rand = "0.9.1"
moka= { version = "0.12.10", features = ["future"] }
indexmap = "2.7.1"
async-trait = "0.1.88"
jsonwebtoken = "9.3.1"
uuid = { version = "1.13.1", features = ["v4"] }
sha2 = "0.10.8"
hex = "0.4.3"
web-push = "0.10"
base64 = "0.21"

[features]
docker=["openssl"]

[dependencies.openssl]
features = ["vendored"]
optional = true
version = "0.10.72"
[build-dependencies]
sha256 = "1.6.0"
